crates/kwokka-macros/tests/ui/parameterized.rs
#[kwokka::main(affine)]
async fn main(answer: u32) {}
